--- a/Project15.vcxproj.filters
+++ b/Project15.vcxproj.filters
@@ -21,13 +21,11 @@
     <ClCompile Include="similiarChecker.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="similarChecker_test.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="main.h">
-      <Filter>헤더 파일</Filter>
-    </ClInclude>
   </ItemGroup>
 </Project>
