--- a/Project15.vcxproj.filters
+++ b/Project15.vcxproj.filters
@@ -18,10 +18,19 @@
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="similiarChecker.cpp">
+    <ClCompile Include="lengthChecker.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="similarChecker_test.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\gtest\gtest-all.cc">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="$(MSBuildThisFileDirectory)..\..\lib\native\src\gmock\gmock-all.cc">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="alpha.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
